force-app/main/default/objects/T_Debug_Setting__mdt/T_Debug_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Configurações de Debug</description>
    <label>Triscal debug setting</label>
    <pluralLabel>Triscal debug setting</pluralLabel>
</CustomObject>