force-app/main/default/objects/T_Debug_Setting__mdt/fields/T_Armazenar_Cause__c.field-meta.xml
<CustomField>
    <fullName>T_Armazenar_Cause__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Se true armazena a causa da exception caso exista</description>
    <label>Armazenar Cause?</label>
    <type>Checkbox</type>
</CustomField>