force-app/main/default/objects/T_Debug_Setting__mdt/fields/T_Armazenar_linha_debug__c.field-meta.xml
<CustomField>
    <fullName>T_Armazenar_linha_debug__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Se true armazena linha de debug</description>
    <label>Armazenar linha debug?</label>
    <type>Checkbox</type>
</CustomField>