force-app/main/default/objects/T_Debug_Setting__mdt/fields/T_Armazenar_StackTrace__c.field-meta.xml
<CustomField>
    <fullName>T_Armazenar_StackTrace__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Se true então armazena o StackTrace da exceção</description>
    <inlineHelpText>Se true então armazena o StackTrace da exceção</inlineHelpText>
    <label>Armazenar StackTrace?</label>
    <type>Checkbox</type>
</CustomField>