force-app/main/default/objects/T_Debug_Setting__mdt/fields/T_Armazenar_texto_Exception__c.field-meta.xml
<CustomField>
    <fullName>T_Armazenar_texto_Exception__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Se true então armazena o texto da exceção</description>
    <inlineHelpText>Se true então armazena o texto da exceção</inlineHelpText>
    <label>Armazenar texto Exception?</label>
    <type>Checkbox</type>
</CustomField>